test/Fail/Issue920a.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  x = _63 (A' = A) : A (blocked on _63)
  _63 (A' = A) = x : A (blocked on _63)

Issue920a.agda:26.23-58: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue920a.agda:26.23-58
  Issue920a.agda:26.49-50
  Issue920a.agda:26.52-56
